Padding; added to Cockatrice description.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           </header>
           <ul>
             <li>University of Michigan undergraduate</li>
-            <li>CSE major, class of 2017</li>
+            <li>CS-Eng major, class of 2017</li>
             <li>GPA: 4.0</li>
           </ul>
         </section>
@@ -80,46 +80,50 @@
       </header>
       <div class="row">
         <div class="col-md-6">
-          <span class="job-description pull-left">Web developer intern</span>
-          <span class="job-date pull-right">Summer 2011</span>
-          <span class="clearfix"></span>
+          <div class="job">
+            <span class="job-description pull-left">Web developer intern</span>
+            <span class="job-date pull-right">Summer 2011</span>
+            <span class="clearfix"></span>
 
-          <span class="job-employer pull-left">
-            <a href="http://www.samsa.com/">System and Marketing Services of America</a>
-          </span>
-          <span class="job-location pull-right">Saginaw, MI</span>
-          <span class="clearfix"></span>
+            <span class="job-employer pull-left">
+              <a href="http://www.samsa.com/">System and Marketing Services of America</a>
+            </span>
+            <span class="job-location pull-right">Saginaw, MI</span>
+            <span class="clearfix"></span>
 
-          <ul>
-            <li>Built and maintained internal task management website.</li>
-            <li>Responsible for independently designing and implementing the
-            web application according to the company's needs.</li>
-            <li>Used HTML, CSS, Javascript, MySQL, and PHP, with 
-            <a href="http://jquery.com/">jQuery</a>,
-            <a href="http://ellislab.com/codeigniter">CodeIgniter</a>, and
-            <a href="http://getbootstrap.com/">Bootstrap.</a>
-            </li>
-          </ul>
+            <ul>
+              <li>Built and maintained internal task management website.</li>
+              <li>Responsible for independently designing and implementing the
+              web application according to the company's needs.</li>
+              <li>Used HTML, CSS, Javascript, MySQL, and PHP, with
+              <a href="http://jquery.com/">jQuery</a>,
+              <a href="http://ellislab.com/codeigniter">CodeIgniter</a>, and
+              <a href="http://getbootstrap.com/">Bootstrap.</a>
+              </li>
+            </ul>
+          </div>
         </div>
         <div class="col-md-6">
-          <span class="job-description pull-left">Teaching assistant</span>
-          <span class="job-date pull-right">Summer 2012</span>
-          <span class="clearfix"></span>
+          <div class="job">
+            <span class="job-description pull-left">Teaching assistant</span>
+            <span class="job-date pull-right">Summer 2012</span>
+            <span class="clearfix"></span>
 
-          <span class="job-employer pull-left">
-            <a href="http://www.svsu.edu/">Saginaw Valley State University</a>
-          </span>
-          <span class="job-location pull-right">Saginaw, MI</span>
-          <span class="clearfix"></span>
+            <span class="job-employer pull-left">
+              <a href="http://www.svsu.edu/">Saginaw Valley State University</a>
+            </span>
+            <span class="job-location pull-right">Saginaw, MI</span>
+            <span class="clearfix"></span>
 
-          <ul>
-            <li>Program through SVSU to increase math ability of local
-            underprivileged middle-schoolers.</li>
-            <li>Collaborated with teammates to engage students during class
-            activities.</li>
-            <li>Worked one-on-one with assigned children to provide
-            personalized education based on identified deficiencies.</li>
-          </ul>
+            <ul>
+              <li>Program through SVSU to increase math ability of local
+              underprivileged middle-schoolers.</li>
+              <li>Collaborated with teammates to engage students during class
+              activities.</li>
+              <li>Worked one-on-one with assigned children to provide
+              personalized education based on identified deficiencies.</li>
+            </ul>
+          </div>
         </div>
       </div>
     </section>
@@ -140,52 +144,56 @@
 
       <div class="row">
         <div class="col-md-3">
-          <header>
-            <b><a href="http://github.com/arxanas/Cockatrice">Cockatrice</a></b>
-            <small class="languages">C++, Qt</small>
-          </header>
-          <p>
-            An open-source game engine I contribute to. Plays
-            trading-card games, such as Magic: the Gathering, online.
-            Client-server architecture.
-          </p>
-          <p class="hidden-print">
-            <br />
-            (FIXME: How do
-            I specify this is an open-source project I contribute to, not one
-            I made?)
-          </p>
+          <section class="project">
+            <header>
+              <b><a href="http://github.com/arxanas/Cockatrice">Cockatrice</a></b>
+              <small class="languages">C++, Qt</small>
+            </header>
+            <p>
+              An open-source game engine I contribute to. Plays
+              trading-card games, such as Magic: the Gathering, online.
+              Written with the Qt framework for C++ for GUI and networking.
+            </p>
+          </section>
         </div>
         <div class="col-md-3">
-          <header>
-            <b><a href="http://github.com/arxanas/mtg-updater">mtg-updater</a></b>
-            <small class="languages">HTML, CSS, PHP, Python</small>
-          </header>
-          <p>
-            Automatically scraped card data from a website for use in Cockatrice,
-            to provide the most up-to-date data available. People downloaded that
-            data more than 40,000 times over the project's lifetime.
-          </p>
+          <section class="project">
+            <header>
+              <b><a href="http://github.com/arxanas/mtg-updater">mtg-updater</a></b>
+              <small class="languages">HTML, CSS, PHP, Python</small>
+            </header>
+            <p>
+              Automatically scraped card data from a website for use in Cockatrice,
+              to provide the most up-to-date data available. People downloaded that
+              data more than 40,000 times over the project's lifetime.
+            </p>
+          </section>
         </div>
         <div class="col-md-3">
-          <header>
-            <b>class-scheduler</b>
-            <small class="languages">Python</small>
-          </header>
-          <p>
-            Connect to the <a href="http://developer.it.umich.edu/">umich API</a>
-            to find all possible arrangements of schedules for a list of
-            classes semester. Takes intercampus trips into account, and other
-            criteria are easily added (such as lunch).
-          </p>
+          <section class="project">
+            <header>
+              <b><a href="http://github.com/arxanas/umichsched">umichsched</a></b>
+              <small class="languages">Python</small>
+            </header>
+            <p>
+              Connect to the <a href="http://developer.it.umich.edu/">umich API</a>
+              to find all possible arrangements of schedules for a list of
+              classes semester. Takes intercampus trips into account, and other
+              criteria are easily added (such as lunch).
+            </p>
+          </section>
         </div>
         <div class="col-md-3">
-          <header>
-            <b><a href="http://github.com/arxanas/schmacebook">Schmacebook</a></b>
-            <small>HTML, CSS, Javascript, PHP, MySQL</small>
-          </header>
-          A social networking site with news feeds, wall posts, profiles, private
-          messages, likes (and dislikes!), all in real-time.
+          <section class="project">
+            <header>
+              <b><a href="http://github.com/arxanas/schmacebook">Schmacebook</a></b>
+              <small class="languages">HTML, CSS, Javascript, PHP, MySQL</small>
+            </header>
+            <p>
+              A social networking site with news feeds, wall posts, profiles, private
+              messages, likes (and dislikes!), all in real-time.
+            </p>
+          </section>
         </div>
       </div>
     </section>
