Fixed typo in umichsched project.

--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
             <p>
               Connect to the <a href="http://developer.it.umich.edu/">umich API</a>
               to find all possible arrangements of schedules for a list of
-              classes semester. Takes intercampus trips into account, and other
-              criteria are easily added (such as lunch).
+              classes for a semester. Takes intercampus trips into account, and
+              other criteria are easily added (such as lunch).
             </p>
           </section>
         </div>
