Renamed to schedumich.

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         <div class="col-md-3">
           <section class="project">
             <header>
-              <b><a href="http://github.com/arxanas/umichsched">umichsched</a></b>
+              <b><a href="http://github.com/arxanas/schedumich">schedumich</a></b>
               <small class="languages">Python</small>
             </header>
             <p>
