--- a/index.html
+++ b/index.html
@@ -32,44 +32,96 @@
           <li>
             <span class="glyphicon glyphicon-globe"></span>
             <span class="contact-item">
-              <a href="http://github.com/arxanas">github.com/arxanas</a>
+              <a href="http://stackoverflow.com/users/344643/waleed-khan">
+                <span class="hidden-print">Stack Overflow</span>
+                <span class="visible-print">stackoverflow.com/users/344643</span>
+              </a>
+            </span>
+          </li>
+          <li>
+            <span class="glyphicon glyphicon-heart"></span>
+            <span class="contact-item">
+              <a href="http://github.com/arxanas">
+                <span class="hidden-print">Github</span>
+                <span class="visible-print">github.com/arxanas</span>
+              </a>
             </span>
           </li>
         </ul>
       </div>
     </header>
 
-    <!-- Education info -->
+    <!-- Info -->
     <div class="info-section">
-      <header>
-        <h4>Education</h4>
-      </header>
-
       <div class="row">
-        <!-- Education -->
-        <section class="col-xs-6">
+        <div class="col-xs-6">
           <header>
-            <b>Enrollment</b>
+            <h4>Education</h4>
           </header>
-          <ul>
-            <li>University of Michigan undergraduate</li>
-            <li>CS-Eng major, class of 2017</li>
-            <li>GPA: 4.0</li>
-          </ul>
-        </section>
 
-        <!-- Classes taken -->
-        <section class="col-xs-6">
+          <div class="row">
+            <!-- Education -->
+            <section class="col-xs-6">
+              <header>
+                <b>Enrollment</b>
+              </header>
+              <ul>
+                <li>University of Michigan</li>
+                <li>CS-Eng major, class of 2017</li>
+                <li>GPA: 4.0</li>
+              </ul>
+            </section>
+
+            <!-- Classes taken -->
+            <section class="col-xs-6">
+              <header>
+                <b>Classes taken</b>
+              </header>
+              <ul>
+                <li>EECS 203 — A+</li>
+                <li>EECS 270 — A</li>
+                <li>EECS 280 — A</li>
+                <li>EECS 281 — A</li>
+              </ul>
+            </section>
+          </div>
+        </div>
+
+        <!-- Skills -->
+        <div class="col-xs-6">
           <header>
-            <b>Classes taken</b>
+            <h4>Skills</h4>
           </header>
-          <ul>
-            <li>EECS 203 — A+</li>
-            <li>EECS 270 — A</li>
-            <li>EECS 280 — A</li>
-            <li>EECS 281 — A</li>
-          </ul>
-        </section>
+
+          <div class="row">
+            <!-- Languages -->
+            <section class="col-xs-6">
+              <header>
+                <b>Languages</b>
+              </header>
+
+              <ul>
+                <li>Python</li>
+                <li>HTML, CSS</li>
+                <li>Javascript</li>
+                <li>PHP, MySQL</li>
+              </ul>
+            </section>
+
+            <!-- Tools -->
+            <section class="col-xs-6">
+              <header>
+                <b>Tools</b>
+              </header>
+
+              <ul>
+                <li>Bash</li>
+                <li>Git</li>
+                <li>Make</li>
+              </ul>
+            </section>
+          </div>
+        </div>
       </div>
     </div>
 
@@ -79,6 +131,7 @@
         <h4>Work experience</h4>
       </header>
       <div class="row">
+        <!-- Intern job -->
         <div class="col-md-6">
           <div class="job">
             <span class="job-description pull-left">Web developer intern</span>
@@ -103,6 +156,8 @@
             </ul>
           </div>
         </div>
+
+        <!-- TA job -->
         <div class="col-md-6">
           <div class="job">
             <span class="job-description pull-left">Teaching assistant</span>
@@ -136,7 +191,7 @@
           <small class="hidden-print">
             <a href="http://github.com/arxanas">See more on Github...</a>
           </small>
-          <small class="visible-print">
+          <small class="projects-more pull-right visible-print">
             <a href="http://github.com/arxanas">(More on Github)</a>
           </small>
         </h4>
