--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
     ga('create', 'UA-53066274-1', 'auto');
+    ga('require', 'displayfeatures');
     ga('send', 'pageview');
 
   </script>
