Made tablet-friendly; fixed work experience heading bug.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Waleed Khan's Resume</title>
 
   <link rel="stylesheet" href="css/bootstrap.min.css" />
@@ -146,15 +148,15 @@
         <!-- Intern job -->
         <div class="col-md-6">
           <div class="job">
-            <span class="job-description pull-left">Web developer intern</span>
-            <span class="job-date pull-right">Summer 2011</span>
-            <span class="clearfix"></span>
+            <div class="job-description pull-left">Web developer intern</div>
+            <div class="job-date pull-right">Summer 2011</div>
+            <div class="clearfix"></div>
 
-            <span class="job-employer pull-left">
+            <div class="job-employer pull-left">
               <a href="http://www.samsa.com/">System and Marketing Services of America</a>
-            </span>
-            <span class="job-location pull-right">Saginaw, MI</span>
-            <span class="clearfix"></span>
+            </div>
+            <div class="job-location pull-right">Saginaw, MI</div>
+            <div class="clearfix"></div>
 
             <ul>
               <li>Built and maintained internal task management website.</li>
@@ -172,15 +174,15 @@
         <!-- TA job -->
         <div class="col-md-6">
           <div class="job">
-            <span class="job-description pull-left">Teaching assistant</span>
-            <span class="job-date pull-right">Summer 2012</span>
-            <span class="clearfix"></span>
+            <div class="job-description pull-left">Teaching assistant</div>
+            <div class="job-date pull-right">Summer 2012</div>
+            <div class="clearfix"></div>
 
-            <span class="job-employer pull-left">
+            <div class="job-employer pull-left">
               <a href="http://www.svsu.edu/">Saginaw Valley State University</a>
-            </span>
-            <span class="job-location pull-right">Saginaw, MI</span>
-            <span class="clearfix"></span>
+            </div>
+            <div class="job-location pull-right">Saginaw, MI</div>
+            <div class="clearfix"></div>
 
             <ul>
               <li>Program through SVSU to increase math ability of local
