--- a/index.html
+++ b/index.html
@@ -24,248 +24,256 @@
   </script>
 </head>
 <body>
-  <div class="container">
-    <header class="row resume-header">
-      <div class="col-xs-6">
-        <h2 class="name">Waleed Khan</h2>
-      </div>
-      <div class="col-xs-6">
-        <ul class="well pull-right list-unstyled">
-          <li>
-            <span class="glyphicon glyphicon-earphone"></span>
-            <span class="contact-item">
-              (989) 928-6220
-            </span>
-          </li>
-          <li>
-            <span class="glyphicon glyphicon-envelope"></span>
-            <span class="contact-item">
-              <a href="mailto:me@waleedkhan.name">me@waleedkhan.name</a>
-            </span>
-          </li>
-          <li>
-            <span class="glyphicon glyphicon-globe"></span>
-            <span class="contact-item">
-              <a href="http://stackoverflow.com/users/344643/waleed-khan">
-                <span class="hidden-print">Stack Overflow</span>
-                <span class="visible-print">stackoverflow.com/users/344643</span>
-              </a>
-            </span>
-          </li>
-          <li>
-            <span class="glyphicon glyphicon-heart"></span>
-            <span class="contact-item">
-              <a href="http://github.com/arxanas">
-                <span class="hidden-print">Github</span>
-                <span class="visible-print">github.com/arxanas</span>
-              </a>
-            </span>
-          </li>
-        </ul>
-      </div>
-    </header>
+<div class="container">
+  <header class="row resume-header">
+    <div class="col-sm-6 print-no-collapse">
+      <h2 class="name">Waleed Khan</h2>
+    </div>
+    <div class="col-sm-6 print-no-collapse">
+      <ul class="contact-box well list-unstyled">
+        <li>
+        <span class="glyphicon glyphicon-earphone"></span>
+        <span class="contact-item">
+          (989) 928-6220
+        </span>
+        </li>
+        <li>
+        <span class="glyphicon glyphicon-envelope"></span>
+        <span class="contact-item">
+          <a href="mailto:me@waleedkhan.name">me@waleedkhan.name</a>
+        </span>
+        </li>
+        <li>
+        <span class="glyphicon glyphicon-globe"></span>
+        <span class="contact-item">
+          <a href="http://stackoverflow.com/users/344643/waleed-khan">
+            <span class="hidden-print">Stack Overflow</span>
+            <span class="visible-print">stackoverflow.com/users/344643</span>
+          </a>
+        </span>
+        </li>
+        <li>
+        <span class="glyphicon glyphicon-heart"></span>
+        <span class="contact-item">
+          <a href="http://github.com/arxanas">
+            <span class="hidden-print">Github</span>
+            <span class="visible-print">github.com/arxanas</span>
+          </a>
+        </span>
+        </li>
+      </ul>
+    </div>
+  </header>
 
-    <!-- Info -->
-    <div class="info-section">
-      <div class="row">
-        <div class="col-xs-6">
-          <header>
-            <h4>Education</h4>
-          </header>
+  <!-- Info -->
+  <div class="info-section">
+    <div class="row">
+      <!-- Education -->
+      <div class="col-md-6 print-no-collapse">
+        <header>
+          <h4>Education</h4>
+        </header>
 
-          <div class="row">
-            <!-- Education -->
-            <section class="col-xs-6">
-              <header>
-                <b>Enrollment</b>
-              </header>
-              <ul>
-                <li>University of Michigan</li>
-                <li>CS-Eng major, class of 2017</li>
-                <li>GPA: 4.0</li>
-              </ul>
-            </section>
+        <div class="row">
+          <!-- Enrollment -->
+          <section class="col-xs-6 print-no-collapse">
+            <header>
+              <b>Enrollment</b>
+            </header>
+            <ul>
+              <li>University of Michigan</li>
+              <li>CS-Eng major</li>
+              <li>Class of 2017
+              <li>GPA: 4.0</li>
+            </ul>
+          </section>
 
-            <!-- Classes taken -->
-            <section class="col-xs-6">
-              <header>
-                <b>Classes taken</b>
-              </header>
-              <ul>
-                <li>EECS 203 — A+</li>
-                <li>EECS 270 — A</li>
-                <li>EECS 280 — A</li>
-                <li>EECS 281 — A</li>
-              </ul>
-            </section>
-          </div>
+          <!-- Classes taken -->
+          <section class="col-xs-6 print-no-collapse">
+            <header>
+              <b>Classes taken</b>
+            </header>
+            <ul>
+              <li>EECS 203 — A+</li>
+              <li>EECS 270 — A</li>
+              <li>EECS 280 — A</li>
+              <li>EECS 281 — A</li>
+            </ul>
+          </section>
         </div>
+      </div>
 
-        <!-- Skills -->
-        <div class="col-xs-6">
-          <header>
-            <h4>Skills</h4>
-          </header>
+      <!-- Skills -->
+      <div class="col-md-6 print-no-collapse">
+        <header>
+          <h4>Skills</h4>
+        </header>
 
-          <div class="row">
-            <!-- Languages -->
-            <section class="col-xs-6">
-              <header>
-                <b>Languages</b>
-              </header>
+        <div class="row">
+          <!-- Languages -->
+          <section class="col-xs-6 print-no-collapse">
+            <header>
+              <b>Languages</b>
+            </header>
 
-              <ul>
-                <li>Python</li>
-                <li>HTML, CSS</li>
-                <li>Javascript</li>
-                <li>PHP, MySQL</li>
-              </ul>
-            </section>
+            <ul>
+              <li>Python</li>
+              <li>HTML, CSS</li>
+              <li>Javascript</li>
+              <li>PHP, MySQL</li>
+            </ul>
+          </section>
 
-            <!-- Tools -->
-            <section class="col-xs-6">
-              <header>
-                <b>Tools</b>
-              </header>
+          <!-- Tools -->
+          <section class="col-xs-6 print-no-collapse">
+            <header>
+              <b>Tools</b>
+            </header>
 
-              <ul>
-                <li>Bash</li>
-                <li>Git</li>
-                <li>Make</li>
-              </ul>
-            </section>
-          </div>
+            <ul>
+              <li>Bash</li>
+              <li>Git</li>
+              <li>Make</li>
+            </ul>
+          </section>
         </div>
       </div>
     </div>
-
-    <!-- Work experience -->
-    <section class="info-section">
-      <header>
-        <h4>Work experience</h4>
-      </header>
-      <div class="row">
-        <!-- Intern job -->
-        <div class="col-md-6">
-          <div class="job">
-            <div class="job-description pull-left">Web developer intern</div>
-            <div class="job-date pull-right">Summer 2011</div>
-            <div class="clearfix"></div>
-
-            <div class="job-employer pull-left">
-              <a href="http://www.samsa.com/">System and Marketing Services of America</a>
-            </div>
-            <div class="job-location pull-right">Saginaw, MI</div>
-            <div class="clearfix"></div>
-
-            <ul>
-              <li>Built and maintained internal task management website.</li>
-              <li>Responsible for independently designing and implementing the
-              web application according to the company's needs.</li>
-              <li>Used HTML, CSS, Javascript, MySQL, and PHP, with
-              <a href="http://jquery.com/">jQuery</a>,
-              <a href="http://ellislab.com/codeigniter">CodeIgniter</a>, and
-              <a href="http://getbootstrap.com/">Bootstrap.</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-
-        <!-- TA job -->
-        <div class="col-md-6">
-          <div class="job">
-            <div class="job-description pull-left">Teaching assistant</div>
-            <div class="job-date pull-right">Summer 2012</div>
-            <div class="clearfix"></div>
-
-            <div class="job-employer pull-left">
-              <a href="http://www.svsu.edu/">Saginaw Valley State University</a>
-            </div>
-            <div class="job-location pull-right">Saginaw, MI</div>
-            <div class="clearfix"></div>
-
-            <ul>
-              <li>Program through SVSU to increase math ability of local
-              underprivileged middle-schoolers.</li>
-              <li>Collaborated with teammates to engage students during class
-              activities.</li>
-              <li>Worked one-on-one with assigned children to provide
-              personalized education based on identified deficiencies.</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Projects -->
-    <section class="info-section">
-      <header>
-        <h4>
-          Projects
-          <small class="hidden-print">
-            <a href="http://github.com/arxanas">See more on Github...</a>
-          </small>
-          <small class="projects-more pull-right visible-print">
-            <a href="http://github.com/arxanas">(More on Github)</a>
-          </small>
-        </h4>
-      </header>
-
-      <div class="row">
-        <div class="col-md-3">
-          <section class="project">
-            <header>
-              <b><a href="http://github.com/arxanas/Cockatrice">Cockatrice</a></b>
-              <small class="languages">C++, Qt</small>
-            </header>
-            <p>
-              An open-source game engine I contribute to. Plays
-              trading-card games, such as Magic: the Gathering, online.
-              Written with the Qt framework for C++ for GUI and networking.
-            </p>
-          </section>
-        </div>
-        <div class="col-md-3">
-          <section class="project">
-            <header>
-              <b><a href="http://github.com/arxanas/mtg-updater">mtg-updater</a></b>
-              <small class="languages">HTML, CSS, PHP, Python</small>
-            </header>
-            <p>
-              Automatically scraped card data from a website for use in Cockatrice,
-              to provide the most up-to-date data available. People downloaded that
-              data more than 40,000 times over the project's lifetime.
-            </p>
-          </section>
-        </div>
-        <div class="col-md-3">
-          <section class="project">
-            <header>
-              <b><a href="http://github.com/arxanas/schedumich">schedumich</a></b>
-              <small class="languages">Python</small>
-            </header>
-            <p>
-              Connect to the <a href="http://developer.it.umich.edu/">umich API</a>
-              to find all possible arrangements of schedules for a list of
-              classes for a semester. Takes intercampus trips into account, and
-              other criteria are easily added (such as lunch).
-            </p>
-          </section>
-        </div>
-        <div class="col-md-3">
-          <section class="project">
-            <header>
-              <b><a href="http://github.com/arxanas/schmacebook">Schmacebook</a></b>
-              <small class="languages">HTML, CSS, Javascript, PHP, MySQL</small>
-            </header>
-            <p>
-              A social networking site with news feeds, wall posts, profiles, private
-              messages, likes (and dislikes!), all in real-time.
-            </p>
-          </section>
-        </div>
-      </div>
-    </section>
   </div>
+
+  <!-- Work experience -->
+  <section class="info-section">
+    <header>
+      <h4>Work experience</h4>
+    </header>
+    <div class="row">
+      <!-- Intern job -->
+      <div class="col-md-6">
+        <div class="job">
+          <div class="row">
+            <div class="col-xs-6">
+              <div class="job-description">Web developer intern</div>
+              <div class="job-employer">
+                  <a href="http://www.samsa.com/">System and Marketing Services of America</a>
+              </div>
+            </div>
+            <div class="col-xs-6">
+              <div class="job-date">Summer 2011</div>
+              <div class="job-location">Saginaw, MI</div>
+            </div>
+          </div>
+
+          <ul>
+            <li>Built and maintained internal task management website.</li>
+            <li>Responsible for independently designing and implementing the
+            web application according to the company's needs.</li>
+            <li>Used HTML, CSS, Javascript, MySQL, and PHP, with
+            <a href="http://jquery.com/">jQuery</a>,
+            <a href="http://ellislab.com/codeigniter">CodeIgniter</a>, and
+            <a href="http://getbootstrap.com/">Bootstrap.</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <!-- TA job -->
+      <div class="col-md-6">
+        <div class="job">
+          <div class="row">
+            <div class="col-xs-6">
+              <div class="job-description">Teaching assistant</div>
+              <div class="job-employer">
+                <a href="http://www.svsu.edu/">Saginaw Valley State University</a>
+              </div>
+            </div>
+            <div class="col-xs-6">
+              <div class="job-date">Summer 2012</div>
+              <div class="job-location">Saginaw, MI</div>
+            </div>
+          </div>
+
+          <ul>
+            <li>Program through SVSU to increase math ability of local
+            underprivileged middle-schoolers.</li>
+            <li>Collaborated with teammates to engage students during class
+            activities.</li>
+            <li>Worked one-on-one with assigned children to provide
+            personalized education based on identified deficiencies.</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Projects -->
+  <section class="info-section">
+    <header>
+      <h4>
+        Projects
+        <small class="hidden-print">
+          <a href="http://github.com/arxanas">See more on Github...</a>
+        </small>
+        <small class="projects-more pull-right visible-print">
+          <a href="http://github.com/arxanas">(More on Github)</a>
+        </small>
+      </h4>
+    </header>
+
+    <div class="row">
+      <div class="col-md-3">
+        <section class="project">
+          <header>
+            <b><a href="http://github.com/arxanas/Cockatrice">Cockatrice</a></b>
+            <small class="languages">C++, Qt</small>
+          </header>
+          <p>
+          An open-source game engine I contribute to. Plays
+          trading-card games, such as Magic: the Gathering, online.
+          Written with the Qt framework for C++ for GUI and networking.
+          </p>
+        </section>
+      </div>
+      <div class="col-md-3">
+        <section class="project">
+          <header>
+            <b><a href="http://github.com/arxanas/mtg-updater">mtg-updater</a></b>
+            <small class="languages">HTML, CSS, PHP, Python</small>
+          </header>
+          <p>
+          Automatically scraped card data from a website for use in Cockatrice,
+          to provide the most up-to-date data available. People downloaded that
+          data more than 40,000 times over the project's lifetime.
+          </p>
+        </section>
+      </div>
+      <div class="col-md-3">
+        <section class="project">
+          <header>
+            <b><a href="http://github.com/arxanas/schedumich">schedumich</a></b>
+            <small class="languages">Python</small>
+          </header>
+          <p>
+          Connect to the <a href="http://developer.it.umich.edu/">umich API</a>
+          to find all possible arrangements of schedules for a list of
+          classes for a semester. Takes intercampus trips into account, and
+          other criteria are easily added (such as lunch).
+          </p>
+        </section>
+      </div>
+      <div class="col-md-3">
+        <section class="project">
+          <header>
+            <b><a href="http://github.com/arxanas/schmacebook">Schmacebook</a></b>
+            <small class="languages">HTML, CSS, Javascript, PHP, MySQL</small>
+          </header>
+          <p>
+          A social networking site with news feeds, wall posts, profiles, private
+          messages, likes (and dislikes!), all in real-time.
+          </p>
+        </section>
+      </div>
+    </div>
+  </section>
+</div>
 </body>
 </html>
