Added 'unix-like systems' to tools.

--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
             </header>
 
             <ul>
+              <li>Unix-like systems</li>
               <li>Bash</li>
               <li>Git</li>
               <li>Make</li>
