Fixed validation issues.

--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
     <div class="col-sm-6 print-no-collapse">
       <ul class="contact-box well list-unstyled">
         <li>
-        <span class="glyphicon glyphicon-earphone"></span>
+        <span class="glyphicon glyphicon-earphone"><!-- --></span>
         <span class="contact-item">
           (989) 928-6220
         </span>
         </li>
         <li>
-        <span class="glyphicon glyphicon-envelope"></span>
+        <span class="glyphicon glyphicon-envelope"><!-- --></span>
         <span class="contact-item">
           <a href="mailto:me@waleedkhan.name">me@waleedkhan.name</a>
         </span>
         </li>
         <li>
-        <span class="glyphicon glyphicon-globe"></span>
+        <span class="glyphicon glyphicon-globe"><!-- --></span>
         <span class="contact-item">
           <a href="http://stackoverflow.com/users/344643/waleed-khan">
             <span class="hidden-print">Stack Overflow</span>
@@ -53,7 +53,7 @@
         </span>
         </li>
         <li>
-        <span class="glyphicon glyphicon-heart"></span>
+        <span class="glyphicon glyphicon-heart"><!-- --></span>
         <span class="contact-item">
           <a href="http://github.com/arxanas">
             <span class="hidden-print">Github</span>
@@ -83,7 +83,7 @@
             <ul>
               <li>University of Michigan</li>
               <li>CS-Eng major</li>
-              <li>Class of 2017
+              <li>Class of 2017</li>
               <li>GPA: 4.0</li>
             </ul>
           </section>
