Small screen legibility fixes.

--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
         <!-- Small screens -->
         <div class="row visible-xs-block visible-sm-block">
           <!-- Enrollment -->
-          <section class="col-sm-6 print-no-collapse">
+          <section class="col-xs-6 print-no-collapse">
             <header>
               <b>Enrollment</b>
             </header>
             <ul>
-              <li>University of Michigan undergraduate.</li>
+              <li>Univ. of Michigan.</li>
               <li>CS-Eng major.</li>
               <li>Class of 2017.</li>
               <li>GPA: 4.0 / 4.0.</li>
@@ -90,7 +90,7 @@
           </section>
 
           <!-- Classes taken -->
-          <section class="col-sm-6 print-no-collapse">
+          <section class="col-xs-6 print-no-collapse">
             <header>
               <b>Classes taken</b>
             </header>
