Fixed contact box not aligning to the right on Chrome's print view.

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <div class="col-sm-6 print-no-collapse">
       <h2 class="name">Waleed Khan</h2>
     </div>
-    <div class="col-sm-6 print-no-collapse">
-      <ul class="contact-box well list-unstyled">
+    <div class="col-sm-6 print-no-collapse contact-box">
+      <ul class="contact-box-list well list-unstyled">
         <li>
         <span class="glyphicon glyphicon-earphone"><!-- --></span>
         <span class="contact-item">
