Updated resume based on PASS feedback.

--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
               <b>Enrollment</b>
             </header>
             <ul>
-              <li>Univ. of Michigan.</li>
-              <li>CS-Eng major.</li>
+              <li>University of Michigan.</li>
+              <li>CS major.</li>
               <li>Class of 2017.</li>
-              <li>GPA: 4.0 / 4.0.</li>
+              <li>GPA: <strong>4.0 / 4.0</strong>.</li>
             </ul>
           </section>
 
@@ -95,10 +95,10 @@
               <b>Classes taken</b>
             </header>
             <ul>
-              <li>EECS 203 — A+</li>
-              <li>EECS 270 — A</li>
-              <li>EECS 280 — A</li>
-              <li>EECS 281 — A</li>
+              <li>EECS 203</li>
+              <li>EECS 270</li>
+              <li>EECS 280</li>
+              <li>EECS 281</li>
             </ul>
           </section>
         </div>
@@ -111,9 +111,9 @@
               <b>Enrollment</b>
             </header>
             <p>
-              University of Michigan undergraduate.
-              CS-Eng major, class of 2017.
-              GPA:&nbsp;4.0&nbsp;/&nbsp;4.0.
+              University of Michigan undergraduate.&nbsp;&nbsp;
+              CS major, class of 2017.&nbsp;&nbsp;
+              GPA:&nbsp;<strong>4.0&nbsp;/&nbsp;4.0</strong>.
             </p>
           </section>
 
@@ -203,7 +203,7 @@
     </header>
     <div class="row">
       <!-- Intern job -->
-      <div class="col-md-6">
+      <div class="col-md-4">
         <div class="job">
           <div class="row">
             <div class="col-xs-6">
@@ -231,8 +231,36 @@
         </div>
       </div>
 
+      <!-- IA job -->
+      <div class="col-md-4">
+        <div class="job">
+          <div class="row">
+            <div class="col-xs-6">
+              <div class="job-description">Instructional assistant</div>
+              <div class="job-employer">
+                  <a href="http://www.umich.edu/">University of Michigan</a>
+              </div>
+            </div>
+            <div class="col-xs-6">
+              <div class="job-date hidden-print">Sept. 2014 &ndash; Present</div>
+              <div class="job-date visible-print">September 2014 &ndash; Present</div>
+              <div class="job-location">Ann Arbor, MI</div>
+            </div>
+          </div>
+
+          <ul>
+            <li>Maintained and updated the in-house automatic grader software,
+            written in PHP and Perl.</li>
+            <li>Collaborated with other faculty to write homework, projects
+            specifications, and exams.</li>
+            <li>Held regular office hours to explain topics to students and
+            help track down bugs.</li>
+          </ul>
+        </div>
+      </div>
+
       <!-- TA job -->
-      <div class="col-md-6">
+      <div class="col-md-4">
         <div class="job">
           <div class="row">
             <div class="col-xs-6">
@@ -250,10 +278,10 @@
           <ul>
             <li>Program through SVSU to increase math ability of local
             underprivileged middle-schoolers.</li>
-            <li>Collaborated with teammates to engage students during class
-            activities.</li>
+            <li class="hidden-print">Collaborated with fellow teaching
+            assistants to engage students during class activities.</li>
             <li>Worked one-on-one with assigned children to provide
-            personalized education based on identified deficiencies.</li>
+            personalized education.</li>
           </ul>
         </div>
       </div>
@@ -282,9 +310,9 @@
             <small class="languages">C++, Qt</small>
           </header>
           <p>
-          An open-source game engine I contribute to. Plays
-          trading-card games, such as Magic: the Gathering, online.
-          Written with the Qt framework for C++ for GUI and networking.
+          Contributed to an open-source game engine. Plays trading-card games,
+          such as Magic: the Gathering, online. Written with the Qt framework
+          for C++ for GUI and networking.
           </p>
         </section>
       </div>
@@ -295,9 +323,9 @@
             <small class="languages">HTML, CSS, PHP, Python</small>
           </header>
           <p>
-          Automatically scraped card data from a website for use in Cockatrice,
-          to provide the most up-to-date data available. People downloaded that
-          data more than 40,000 times over the project's lifetime.
+          Automatically scraped card data from a Magic: the Gathering website
+          for use in Cockatrice, to provide the most up-to-date data available.
+          Data was downloaded more than 40,000 times over the project's lifetime.
           </p>
         </section>
       </div>
@@ -308,14 +336,14 @@
             <small class="languages">Python</small>
           </header>
           <p>
-          Connect to the <a href="http://developer.it.umich.edu/">umich API</a>
-          to find all possible arrangements of schedules for a list of
-          classes for a semester. Takes intercampus trips into account, and
-          other criteria are easily added (such as lunch).
+          Connect to the <a href="http://developer.it.umich.edu/">University of
+          Michigan API</a> to find all possible arrangements of schedules for a
+          list of classes for a semester. Takes intercampus trips into account,
+          and other criteria are easily added (such as lunch).
           </p>
         </section>
       </div>
-      <div class="col-md-3">
+      <div class="col-md-3 hidden-print">
         <section class="project">
           <header>
             <b><a href="http://github.com/arxanas/schmacebook">Schmacebook</a></b>
