Update with Amazon internship, etc.
I seem to have lost many changes that were present in the production
version of the resume, so merge them back in.

--- a/index.html
+++ b/index.html
@@ -20,14 +20,13 @@
     ga('create', 'UA-53066274-1', 'auto');
     ga('require', 'displayfeatures');
     ga('send', 'pageview');
-
   </script>
 </head>
 <body>
 <div class="container">
   <header class="row resume-header">
     <div class="col-sm-6 print-no-collapse">
-      <h2 class="name">Waleed Khan</h2>
+      <h2 class="name">Waleed Iftikhar Khan</h2>
     </div>
     <div class="col-sm-6 print-no-collapse contact-box">
       <ul class="contact-box-list well list-unstyled">
@@ -69,123 +68,79 @@
   <div class="info-section">
     <div class="row">
       <!-- Education -->
-      <div class="col-md-6 print-no-collapse">
-        <header>
-          <h4>Education</h4>
-        </header>
-
-        <!-- Small screens -->
-        <div class="row visible-xs-block visible-sm-block">
-          <!-- Enrollment -->
-          <section class="col-xs-6 print-no-collapse">
-            <header>
-              <b>Enrollment</b>
-            </header>
-            <ul>
-              <li>University of Michigan.</li>
-              <li>CS major.</li>
-              <li>Class of 2017.</li>
-              <li>GPA: <strong>4.0 / 4.0</strong>.</li>
-            </ul>
-          </section>
-
-          <!-- Classes taken -->
-          <section class="col-xs-6 print-no-collapse">
-            <header>
-              <b>Classes taken</b>
-            </header>
-            <ul>
-              <li>EECS 203</li>
-              <li>EECS 270</li>
-              <li>EECS 280</li>
-              <li>EECS 281</li>
-            </ul>
-          </section>
-        </div>
-
+      <div class="col-md-6 col-print-12 print-no-collapse">
         <!-- Large screens -->
-        <div class="row hidden-xs hidden-sm">
-          <!-- Enrollment -->
-          <section class="col-md-12 print-no-collapse">
+        <div class="row">
+          <!-- Education -->
+          <section class="col-xs-6">
             <header>
-              <b>Enrollment</b>
+              <h4>Education</h4>
             </header>
-            <p>
-              University of Michigan undergraduate.&nbsp;&nbsp;
-              CS major, class of 2017.&nbsp;&nbsp;
-              GPA:&nbsp;<strong>4.0&nbsp;/&nbsp;4.0</strong>.
-            </p>
+            <ul>
+              <li>BSE in CS, University of Michigan</li>
+              <li>Expected graduation: April 2016</li>
+              <li>GPA:&nbsp;<strong>3.88&nbsp;/&nbsp;4.00</strong></li>
+            </ul>
           </section>
 
-          <!-- Classes taken -->
-          <section class="col-sm-12 print-no-collapse">
+          <!-- Coursework -->
+          <section class="col-xs-6">
             <header>
-              <b>Classes taken</b>
+              <h4>Coursework</h4>
             </header>
-            <table class="courses-table">
-              <thead>
-                <tr>
-                  <th class="column-code">Code</th>
-                  <th class="column-course">Course</th>
-                  <th class="column-grade">Grade</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td class="column-code">EECS 203</td>
-                  <td class="column-course">Discrete Math</td>
-                  <td class="column-grade">A+</td>
-                </tr>
-                <tr>
-                  <td class="column-code">EECS 270</td>
-                  <td class="column-course">Introduction to Logic Design</td>
-                  <td class="column-grade">A</td>
-                </tr>
-                <tr>
-                  <td class="column-code">EECS 280</td>
-                  <td class="column-course">Programming and Introduction to Data Structures</td>
-                  <td class="column-grade">A</td>
-                </tr>
-                <tr>
-                  <td class="column-code">EECS 281</td>
-                  <td class="column-course">Data Structures and Algorithms</td>
-                  <td class="column-grade">A</td>
-                </tr>
-              </tbody>
-            </table>
+            <ul>
+              <li>Data structures and algorithms</li>
+              <li>Introduction to logic design</li>
+              <li>Operating systems</li>
+              <li>Compilers</li>
+            </ul>
           </section>
         </div>
       </div>
 
       <!-- Skills -->
-      <div class="col-md-6 print-no-collapse">
-        <header>
-          <h4>Skills</h4>
-        </header>
-
-        <div class="row">
-          <!-- Languages -->
-          <section class="col-xs-6 print-no-collapse">
+      <div class="col-md-6 col-print-12">
+        <!-- Text snippet (print) -->
+        <div class="row visible-print skills-blurb">
+          <div class="col-md-12">
             <header>
-              <b>Languages</b>
+              <h4>Skills</h4>
+            </header>
+
+            <ul>
+              <li>Familiar with full-stack web application development: HTML,
+                CSS, Javascript, jQuery, PHP, MySQL.</li>
+              <li>Strong knowledge of Python. Familiar with C++ and Java.</li>
+              <li>Comfortable working in Unix-like environments on the command
+                line.</li>
+            </ul>
+          </div>
+        </div>
+
+        <!-- List (web) -->
+        <div class="row hidden-print">
+          <!-- Languages -->
+          <section class="col-xs-6">
+            <header>
+              <h4>Languages</h4>
             </header>
 
             <ul>
               <li>Python</li>
-              <li>HTML, CSS</li>
-              <li>Javascript</li>
-              <li>PHP, MySQL</li>
+              <li>C++, Java</li>
+              <li>HTML, CSS, Javascript, PHP</li>
+              <li>MySQL</li>
             </ul>
           </section>
 
           <!-- Tools -->
-          <section class="col-xs-6 print-no-collapse">
+          <section class="col-xs-6">
             <header>
-              <b>Tools</b>
+              <h4>Tools</h4>
             </header>
 
             <ul>
-              <li>Unix-like systems</li>
+              <li>Familiarity with Unix-like systems</li>
               <li>Bash</li>
               <li>Git</li>
               <li>Make</li>
@@ -202,31 +157,29 @@
       <h4>Work experience</h4>
     </header>
     <div class="row">
-      <!-- Intern job -->
+      <!-- Internship -->
       <div class="col-md-4">
         <div class="job">
           <div class="row">
             <div class="col-xs-6">
-              <div class="job-description">Web developer intern</div>
+              <div class="job-description">SDE Intern</div>
               <div class="job-employer">
-                  <a href="http://www.samsa.com/">System and Marketing Services of America</a>
+                <a href="http://www.amazon.com">Amazon.com</a>
               </div>
             </div>
             <div class="col-xs-6">
-              <div class="job-date">Summer 2011</div>
-              <div class="job-location">Saginaw, MI</div>
+              <div class="job-date">Summer 2015</div>
+              <div class="job-location">Seattle, WA</div>
             </div>
           </div>
 
           <ul>
-            <li>Built and maintained internal task management website.</li>
-            <li>Responsible for independently designing and implementing the
-            web application according to the company's needs.</li>
-            <li>Used HTML, CSS, Javascript, MySQL, and PHP, with
-            <a href="http://jquery.com/">jQuery</a>,
-            <a href="http://ellislab.com/codeigniter">CodeIgniter</a>, and
-            <a href="http://getbootstrap.com/">Bootstrap.</a>
-            </li>
+            <li>Calculated and displayed savings to customers for all digitally
+              pre-ordered items.</li>
+            <li>Provided heuristics for downstream teams to effectively triage
+              item cancellation events.</li>
+            <li>Implemented groundwork to predict large-scale pre-order release
+              events in order to scale preemptively.</li>
           </ul>
         </div>
       </div>
@@ -236,7 +189,7 @@
         <div class="job">
           <div class="row">
             <div class="col-xs-6">
-              <div class="job-description">Instructional assistant</div>
+              <div class="job-description">Instructional Assistant</div>
               <div class="job-employer">
                   <a href="http://www.umich.edu/">University of Michigan</a>
               </div>
@@ -249,39 +202,40 @@
           </div>
 
           <ul>
-            <li>Maintained and updated the in-house automatic grader software,
-            written in PHP and Perl.</li>
-            <li>Collaborated with other faculty to write homework, projects
-            specifications, and exams.</li>
-            <li>Held regular office hours to explain topics to students and
-            help track down bugs.</li>
+            <li>Heavily streamlined staff workflow by overhauling
+              automatic-grading web application.</li>
+            <li>Developed automated project deployment system for rapid
+              iteration on project specifications.</li>
+            <li>Worked in teams to write homework, project specifications, and
+              exams.</li>
           </ul>
         </div>
       </div>
 
-      <!-- TA job -->
+      <!-- SAMSA internship -->
       <div class="col-md-4">
         <div class="job">
           <div class="row">
             <div class="col-xs-6">
-              <div class="job-description">Teaching assistant</div>
+              <div class="job-description">Web Developer Intern</div>
               <div class="job-employer">
-                <a href="http://www.svsu.edu/">Saginaw Valley State University</a>
+                  <a href="http://www.samsa.com/">System and Marketing Services of America</a>
               </div>
             </div>
             <div class="col-xs-6">
-              <div class="job-date">Summer 2012</div>
+              <div class="job-date">Summer 2011</div>
               <div class="job-location">Saginaw, MI</div>
             </div>
           </div>
 
           <ul>
-            <li>Program through SVSU to increase math ability of local
-            underprivileged middle-schoolers.</li>
-            <li class="hidden-print">Collaborated with fellow teaching
-            assistants to engage students during class activities.</li>
-            <li>Worked one-on-one with assigned children to provide
-            personalized education.</li>
+            <li>Built and maintained internal task management website.</li>
+            <li>Designed user interface and database schema from scratch.</li>
+            <li class="hidden-print">Used HTML, CSS, Javascript, MySQL, and PHP, with
+            <a href="http://jquery.com/">jQuery</a>,
+            <a href="http://ellislab.com/codeigniter">CodeIgniter</a>, and
+            <a href="http://getbootstrap.com/">Bootstrap.</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -343,7 +297,7 @@
           </p>
         </section>
       </div>
-      <div class="col-md-3 hidden-print">
+      <div class="col-md-3">
         <section class="project">
           <header>
             <b><a href="http://github.com/arxanas/schmacebook">Schmacebook</a></b>
